changed project name; added navigation; added shade progress layer;

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BuoylocalDemo"
+        android:theme="@style/Theme.OffersDemo"
 
         android:name=".OffersDemoApp"> <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.BuoylocalDemo">
+            android:theme="@style/Theme.OffersDemo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
