--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanistPermissions = "0.37.3"
-agp = "8.10.0"
+agp = "8.10.1"
 coilCompose = "3.2.0"
 constraintlayoutCompose = "1.1.1"
 hiltAndroidCompiler = "2.56.2"
@@ -14,6 +14,8 @@ activityCompose = "1.10.1"
 composeBom = "2025.05.01"
 ksp = "2.0.21-1.0.27"
 loggingInterceptor = "4.12.0"
+mapsCompose = "4.1.1"
+playServicesMaps = "19.2.0"
 retrofit = "3.0.0"
 converterGson = "3.0.0"
 playServicesLocation = "21.3.0"
@@ -45,6 +47,8 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
+maps-compose = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose" }
+play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
