--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,8 @@ composeBom = "2025.05.01"
 ksp = "2.0.21-1.0.27"
 loggingInterceptor = "4.12.0"
 mapsCompose = "4.1.1"
+material = "1.12.0"
+places = "4.3.1"
 playServicesMaps = "19.2.0"
 retrofit = "3.0.0"
 converterGson = "3.0.0"
@@ -48,6 +50,8 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 maps-compose = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose" }
+material = { module = "com.google.android.material:material", version.ref = "material" }
+places = { module = "com.google.android.libraries.places:places", version.ref = "places" }
 play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
